# CuboidEngine2

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
cuboid_engine/: CMakeLists.txt  cuboid_engine.cpp  cuboid_engine.h  logger.cpp  logger.h
cuboid_engine/glad/: glad.c  glad.h
cuboid_game/: CMakeLists.txt  cuboid_game.cpp
